--- a/CashApp/Info.plist
+++ b/CashApp/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSCameraUsageDescription</key>
 	<string>We need to scan QR codes</string>
+	<key>NSContactsUsageDescription</key>
+	<string>We need to access your contacts</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
