--- a/CashApp/Info.plist
+++ b/CashApp/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>iosDevApp</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.SamuelToh.CashApp</string>
+		</dict>
+	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>We need to scan QR codes</string>
 	<key>NSContactsUsageDescription</key>
