--- a/CashApp/Info.plist
+++ b/CashApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -15,6 +17,8 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>We need to scan QR codes</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save the QR Code</string>
 	<key>NSContactsUsageDescription</key>
 	<string>We need to access your contacts</string>
 	<key>CFBundleDevelopmentRegion</key>
